@@ -515,6 +515,20 @@ static_assert(is_equal_comparable<us, seqv>{},"");
 static_assert(!is_equal_comparable<seqv, std::string>{},"");
 static_assert(!is_equal_comparable<std::string, seqv>{},"");
 
+struct iov : strong::type<int, iov, strong::ordered_with<int>>
+{
+  using strong::type<int, iov, strong::ordered_with<int>>::type;
+};
+
+static_assert(std::is_nothrow_constructible<iov, int>{},"");
+static_assert(std::is_nothrow_copy_constructible<iov>{},"");
+static_assert(std::is_nothrow_move_constructible<iov>{},"");
+static_assert(std::is_nothrow_copy_assignable<iov>{},"");
+static_assert(std::is_nothrow_move_assignable<iov>{},"");
+static_assert(is_less_than_comparable<iov, int>{},"");
+static_assert(is_less_than_comparable<int, iov>{},"");
+static_assert(!is_less_than_comparable<iov, iov>{},"");
+
 TEST_CASE("Construction from a value type lvalue copies it")
 {
   auto orig = std::make_shared<int>(3);
@@ -1114,4 +1128,30 @@ TEST_CASE("conversions")
   std::string svalide{valide};
   REQUIRE(svalidi == "value");
   REQUIRE(svalide == "value");
+}
+
+TEST_CASE("ordered_with")
+{
+  const iov i1{1};
+
+  REQUIRE(i1 < 2);
+  REQUIRE(0 < i1);
+  REQUIRE_FALSE(i1 < 1);
+  REQUIRE_FALSE(1 < i1);
+  REQUIRE(i1 <= 1);
+  REQUIRE(i1 <= 2);
+  REQUIRE_FALSE(i1 <= 0);
+  REQUIRE(1 <= i1);
+  REQUIRE(0 <= i1);
+  REQUIRE_FALSE(2<= i1);
+  REQUIRE(i1 >= 1);
+  REQUIRE(i1 >= 0);
+  REQUIRE_FALSE(i1 >= 2);
+  REQUIRE(1 >= i1);
+  REQUIRE(2 >= i1);
+  REQUIRE_FALSE(0 >= i1);
+  REQUIRE(i1 > 0);
+  REQUIRE_FALSE(i1 > 1);
+  REQUIRE(2 > i1);
+  REQUIRE_FALSE(1 > i1);
 }
